--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "elbowgrease",
-    "version": "1.0.2",
+    "version": "1.0.3",
+    "homepage": "https://iivmok.github.io/elbowgrease",
     "description": "Automatically generate TypeScript classes for your database models",
     "main": "src/elbowgrease.js",
     "types": "src/elbowgrease.d.ts",
