--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "elbowgrease",
-    "version": "1.0.3",
+    "version": "1.1.0",
     "homepage": "https://iivmok.github.io/elbowgrease",
     "description": "Automatically generate TypeScript classes for your database models",
+    "author": "Iivari Mokelainen <iivmok@gmail.com>",
+    "license": "MIT",
+    "repository": "https://github.com/iivmok/elbowgrease",
+    "preferGlobal": true,
     "main": "src/elbowgrease.js",
     "types": "src/elbowgrease.d.ts",
     "bin": {
@@ -19,8 +23,6 @@
         "debug": "node --inspect-brk bin/lbowgrease.js",
         "docs": "typedoc --out docs --name ElbowGrease --hideGenerator & touch docs/.nojekyll"
     },
-    "author": "Iivari Mokelainen <iivmok@gmail.com>",
-    "license": "MIT",
     "dependencies": {},
     "files": [
         "bin",
